Fix login page horizontal scroll bug.

--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -3,7 +3,7 @@
   background-color: white;
   background-size: cover;
   background-position: center 80%;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
 }
 
@@ -14,6 +14,10 @@
   place-items: center;
   text-align: center;
   color: #444;
+}
+
+.login-container h1 {
+  margin: 2rem;
 }
 
 .login-img {
